# autoresearch-anywhere

./: .gitignore  .gitmodules  BACKLOG.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  research.yaml
autoresearch_ac/: __init__.py  cli.py  config.py  cost.py  orchestrator.py
autoresearch_ac/providers/: __init__.py  aws.py  azure.py  gcp.py  oci.py  ssh.py
autoresearch_aw/: __init__.py  cli.py  cost.py  log.py  orchestrator.py
autoresearch_aw/providers/: __init__.py  aws.py  azure.py  gcp.py  oci.py  ssh.py
docs/: demo-aws.cast  demo-aws.sh  demo-gcp.cast  demo-gcp.sh  demo-mac.cast  demo-mac.sh  demo-script.sh  github-discussions-paste.md  github-discussions-paste.txt  show-hn-draft.md  show-hn-paste.txt
tests/: test_dry_run.py
