[project]
name = "autoresearch-anywhere"
version = "0.1.0"
description = "Run autoresearch from anywhere — Mac, GCP, AWS, or Azure"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "torch>=2.6.0",
    "numpy>=2.0",
    "pyarrow>=15.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "requests>=2.32.0",
    "paramiko>=3.4",
    "boto3>=1.34",
    "google-cloud-compute>=1.19",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-resource>=23.0",
    "azure-identity>=1.15",
    "oci>=2.120",
]

[project.scripts]
autoresearch-anywhere = "autoresearch_aw.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["autoresearch_aw"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
