[project]
name = "autoresearch-anycloud"
version = "0.1.0"
description = "Run autoresearch on any cloud GPU — Mac, AWS, GCP, Azure, OCI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "torch>=2.6.0",
    "numpy>=2.0",
    "pyarrow>=15.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "requests>=2.32.0",
    "paramiko>=3.4",
    "boto3>=1.34",
    "google-cloud-compute>=1.19",
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-resource>=23.0",
    "azure-identity>=1.15",
    "oci>=2.120",
]

[project.scripts]
autoresearch-anycloud = "autoresearch_ac.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["autoresearch_ac"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
